# insurtech-open-data

./: .gitignore  README.md  dft-road-safety.sh  dft-road-traffic.sh  geofabrik-osm.sh  main.py  ons-admin-country.sh  ons-admin-county-ua.sh  ons-admin-region.sh  ons-area-codes.sh  ons-census-lsoa.sh  ons-census-msoa.sh  ons-census-oa.sh  ons-country-region.sh  ons-income.sh  ons-postcode-directory.sh  ons-uprn-directory.sh  os-codepoint-impute.py  os-codepoint-open.sh  os-open-names.sh  os-open-roads.sh  os-open-uprn.sh  os-open-usrn.sh  postcode_impute.py  pyproject.toml  uk-police-archive.sh  uk-police-data.sh
notebooks/: impute_postcode.ipynb  open-data.ipynb
