[project]
name = "open-data"
version = "0.1.0"
description = "Clean and impute missing administrative codes for OS Code-Point Open postcode data."
authors = [{name = "Abbas Kiasari", email = "kiasari@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
keywords = [
    "Geospatial",
    "GIS",
    "cartography",
    "visualization",
]

requires-python = ">=3.10,<4.0"

dependencies = [
    "geopandas",
    "pyarrow",
    "openpyxl",
    "geoparse>=0.4.1",
]
[tool.uv]
exclude-newer = "2025-09-10T00:00:00Z"
dev-dependencies = [
    "ruff>=0.6.9",
    "pytest>=8.3.3",
    "pre-commit>=4.1.0",
    "pytest-cov>=5.0.0",
    "coverage[toml]>=7.6.1",
    "lonboard>=0.10.3",
]
[tool.uv.sources]
geoparse = { git = "https://github.com/geoparse/geoparse.git" }

